# swash-gui

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_diagram.js  wave-envelope-plot.html
config/: dev.yml  model001.yml  model001_with_breakwater.yml  model001_with_breakwater_and_vegetation.yml  model001_with_breakwater_of_height_0.yml  no_breakwater.yml
docs/: Gemfile  README.md  _config.yml  breakwater-design.md  configuration-guide.md  configuration-reference.md  experiments.md  index.md  input-file-reference.md  output-interpretation.md  output-reference.md  physics-and-parameters.md  simulation-workflow.md  swash-overview.md  swash-physics.md  template-mapping.md  troubleshooting-guide.md  troubleshooting.md
docs/quick-ref/: config-quick-ref.md  swash-commands.md  workflow-diagram.md
docs/reports/: overflowing_report.md  stability_report.md
docs/swash_manual/: swash_1d_config_summary.md  swash_manual.md
example/: __init__.py  __main__.py  app.py  config.py  logging.py  platform.py
example/api/: api.py  utils.py
example/static/: index.html
example/static/scripts/: header.js  index.js  platform.js  utils.js
example/static/styles/: header.css  index.css  platform.css
simulations/dev_d43a0bde/analysis/: water_levels_and_x_velocity.json  wave_statistics.csv
simulations/dev_d43a0bde/swash/: INPUT  PRINT  data.csv  final_state.mat  norm_end  porosity.txt  structure_height.txt  vegetation_density.txt  wg01.txt  wg02.txt  wg03.txt  wg04.txt  wg05.txt
simulations/model001_58ca0607/analysis/: water_levels_and_x_velocity.json
simulations/model001_58ca0607/swash/: INPUT  PRINT  bathymetry.txt  data.csv  final_state.mat  norm_end  wg01.txt  wg02.txt  wg04.txt  wg06.txt  wg08.txt  wg09.txt
simulations/model001_c610e7bc/analysis/: water_levels_and_x_velocity.json  wave_statistics.csv
simulations/model001_c610e7bc/swash/: INPUT  PRINT  data.csv  final_state.mat  norm_end  wg01.txt  wg04.txt  wg06.txt  wg08.txt
simulations/model001_with_breakwater_9accb0b1/analysis/: water_levels_and_x_velocity.json  wave_statistics.csv
simulations/model001_with_breakwater_9accb0b1/swash/: INPUT  PRINT  bathymetry.txt  data.csv  final_state.mat  norm_end  porosity.txt  wg01.txt  wg02.txt  wg03.txt  wg04.txt  wg05.txt  wg06.txt  wg07.txt  wg08.txt  wg09.txt  wg10.txt
simulations/model001_with_breakwater_and_vegetation_5feb62e9/analysis/: water_levels_and_x_velocity.json  wave_statistics.csv
simulations/model001_with_breakwater_and_vegetation_5feb62e9/swash/: INPUT  PRINT  (+13 more)
src/: analysis.py  cli.py  config.py  simulation.py  wave_analysis.py  wavelength.py
src/dashboard/: __init__.py  app.py  components.py
src/utils/: __init__.py  paths.py  plotting.py  print.py  validators.py
templates/: INPUT
tests/fixtures/: __init__.py  cli.py  config.py  paths.py  simulation.py
tests/unit/: test_analysis.py  test_cli.py  test_cli_missing.py  test_config.py  test_config_missing.py  test_simulation.py  test_simulation_missing.py  test_utils_print.py  test_utils_validators.py  test_wave_analysis.py  test_wavelength.py
(+69 files in other folders)
