[project]
name = "simulations"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Antoine Lefebvre-Brossard", email = "antoinelb@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.0",
    "numpy>=2.0.0",
    "plotly>=6.1.2",
    "polars>=1.30.0",
    "pydantic>=2.11.5",
    "ruamel-yaml>=0.18.12",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "kaleido==0.2.1",
    "dash>=3.0.4",
]

[project.scripts]
cli = "src.cli:run_cli"
c = "src.cli:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.11.12",
    "ty>=0.0.1a8",
]

[tool.black]
line_length = 79
target-version = ['py313']

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
